--- a/src/styles/global.module.css
+++ b/src/styles/global.module.css
@@ -224,7 +224,6 @@ input[type='number']::-webkit-outer-spin-button {
     box-shadow: rgba(60, 64, 67, .6) 0 1px 3px 0, rgba(60, 64, 67, .3) 0 4px 8px 3px;
 }
 
-
 .gradient-background-with-shadow {
     border-radius: 3vw;
     background: rgb(145, 42, 224);
@@ -232,4 +231,11 @@ input[type='number']::-webkit-outer-spin-button {
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
     0 0 0 1px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+
+.button-not-changing-appearance {
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+  display: inline-block;
 }
