--- a/src/styles/global.module.css
+++ b/src/styles/global.module.css
@@ -229,12 +229,20 @@ input[type='number']::-webkit-outer-spin-button {
 
 .gradient-background-with-shadow {
     border-radius: 3vw;
-    background: rgb(145, 42, 224);
+    background: rgb(235, 255, 255);
     background: radial-gradient(circle, rgb(235, 255, 255) 0%, rgb(190, 196, 255) 100%);
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
-    0 0 0 1px rgb(255, 255, 255),
+    /*0 0 0 1px rgb(255, 255, 255),*/
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
+
+/*.gradient-background-with-shadow--alter {*/
+/*    border-radius: 3vw;*/
+/*    background: rgb(235, 255, 255);*/
+/*    background: radial-gradient(circle, rgb(235, 255, 255) 0%, rgb(157, 164, 252) 100%);*/
+/*    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),*/
+/*    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);*/
+/*}*/
 
 .button-not-changing-appearance {
     border: none;
