--- a/src/styles/grid-editor-ui-layout.module.css
+++ b/src/styles/grid-editor-ui-layout.module.css
@@ -1,7 +1,9 @@
 .ui-layout {
     display: grid;
+    position: relative;
     grid-gap: 2vw;
     row-gap: 2vw;
+    /*justify-self: center;*/
     /*min-height: 80vh;*/
     /*height: 80vh;*/
     /*height: auto;*/
@@ -15,11 +17,41 @@
       "replay replay";
 }
 
+
+.ui-layout::before {
+    border-radius: 2vw;
+    background: rgb(235, 255, 255);
+    background: radial-gradient(closest-corner, rgb(108, 116, 255) 0%, rgb(221, 225, 255) 100%);
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1),
+    /*0 0 0 1px rgb(108, 116, 255),*/
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    position: absolute;
+    content: '';
+    z-index: -2000000;
+    background-color: chocolate;
+    height: 102%;
+    width: 100.5%;
+    top: -1%;
+    left: -2%;
+}
+
+@media (min-aspect-ratio: 9/7) {
+    .ui-layout::before {
+        position: absolute;
+        z-index: -2000000;
+        background-color: chocolate;
+        height: 102%;
+        width: 100.5%;
+        top: -.7%;
+        left: -.5%;
+    }
+}
+
 @media (min-aspect-ratio: 9/7) {
     .ui-layout {
         grid-gap: .5vw;
         row-gap: .5vw;
-        grid-template-columns: 33vw 4vw auto;
+        grid-template-columns: 33vw 4vw 44.5vw;
         /*grid-template-rows: 10% auto auto 10%;*/
         /*object-fit: contain;*/
         /*grid-template-columns: 52% 8% auto;*/
